CSS/style.css
.center {
    text-align: center;
  }
  ul {
      list-style: none;
      padding: 0;
  }
  #headers {
      color: white;
  }

  #result {
      display: none;
  }

  img {
      display: inline;
      width: 200px;
      height: 100px;
  }
  #footer {
      width: 100%;
      border-top: solid 2px black;
      background-color: white;
      position: fixed;
      bottom: 0;
  }
  html {
    box-sizing: 'border-box'
  }
  #input-parent {
    width: 160px;
    margin: 0 auto 0 auto;
  }
  .guess {
      display: inline;
      border: 1px solid white;
      border-radius: 10%;
      font-size: 60px;
      color: white;
      padding: 0 25px;
      background-color: rgba(55, 55, 55, 0.8);
  }

  #players-input {
    height: 160px;
    width: 160px;
    border-style: inset;
    border-radius: 100%;
    font-size: 60px;
  }

  #players-input:focus {
    outline: none;
  }
  
  #submit {
    position: relative;
    bottom: 40px;
    left: 40px;
    height: 60px;
    width: 60px;
    border-radius: 100%;
  }

  #input-parent {
    width: 160px;
    margin: 5% auto 50px;
    position: relative;
  }

  body {
    background-color: black !important;
  }


  #app{
    display: none;
    background-color: rgba(55, 55, 55, 0.8);
    border-radius: 10%;
    width: 60%;
    height: 50%;
    margin: 50px auto;
  }

  #intro{
    background-color: rgba(55, 55, 55, 0.8);
    border-radius: 10%;
    width: 60%;
    height: 50%;
    margin: 50px auto;
  }

  .highlighted {
    display: inline;
    border: 2px solid gold;
    border-radius: 10%;
    font-size: 70px;
    color: gold;
    padding: 0 25px;
    background-color: rgba(55, 55, 55, 0.8);
}

